@@ -8,7 +8,7 @@ public class BaseTest {
     @BeforeMethod
     public void beforeMethod(Method m){
         System.out.println("STARTING TEST: " + m.getName());
-        System.out.println("THREAD ID: " + Thread.currentThread().getId());
-        //System.out.println("THREAD ID: " + Thread.currentThread().threadId()); //Alternate method for getId()
+        //System.out.println("THREAD ID: " + Thread.currentThread().getId()); //.getId() is deprecated
+        System.out.println("THREAD ID: " + Thread.currentThread().threadId()); //Alternate method for getId()
     }
 }
